Backend updates GetConsignmentById API
